--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <img style = "max-width: 100%; box-shadow: 5px 5px 35px #DBE3F2;" src = "img/blackpink_index.webp">
         
         </article>
+<p>blah<p>
     </body>
 
 </html>
